# fk-kiltisbot

./: (d)ata_analyysi.ipynb  .gitignore  Dockerfile  README.md  analytics.py  bot.env.example  bot.py  calendar.py  calendar_token.pickle  config-example.py  config.json  config.py.example  credentials.json  creds.json  database.py  db.py  docker-compose.prod.yml  docker-compose.yml  drive.py  drive_import.py  ehdot.txt  fiirumi.py  kalenteri.py  kiltis.db  kiltisbot.py  kiltisbot_test.py  kiltisbot_vanha.py  msg.py  ohje.txt  ohje_en.txt  piikki.py  piikki_ohje.txt  piikki_ohje_en.txt  pyproject.toml  quickstart.py  requirements.txt  secrest.py  settings.py  strings.py  token.pickle  (+1 more)
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml
db/: __init__.py  commands.py  drive.py
fiirumi/: __init__.py
fkcal/: __init__.py
google_auth/: __init__.py
kiltisbot/: bot.py  config.py  strings.py
kiltisbot-env/: pip-selfcheck.json
kiltisbot/db/: __init__.py  commands.py  drive.py
kiltisbot/fiirumi/: __init__.py
kiltisbot/fkcal/: __init__.py
kiltisbot/google_auth/: __init__.py
kiltisbot/msg/: __init__.py
kiltisbot/newsletter/: __init__.py
kiltisbot/piikki/: __init__.py  analytics.py  piikki.py
kiltisbot/utils/: __init__.py  callback_helper.py
msg/: __init__.py
piikki/: __init__.py  analytics.py  piikki.py
utils/: __init__.py
