[tool.poetry]
name = "fk-kiltisbot"
version = "0.1.0"
description = "Telegram bot for managing item & account balances, and showing calendar summaries"
authors = ["Fyysikkokilta ry <it@fyysikkokilta.fi>"]
readme = "README.md"
packages = [{include = "kiltisbot"}]

[tool.poetry.dependencies]
python = "^3.11"
google-api-core = '1.23.0'
google-api-python-client = '1.12.5'
google-auth = '1.23.0'
matplotlib = '3.3.2'
pandas = '1.5.3'
Pillow = '10.3.0'
python-telegram-bot = {extras = ["job-queue"], version = "^20.3"}
requests = '2.32.4'

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.20.0"
black = "^23.3.0"
pyright = "^1.1.310"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120

[tool.poe.tasks]
_black_check = "black --check ."
_type_check = "pyright ."
_lint = "ruff ."

lint = ["_black_check", "_lint", "_type_check"]
run.script = "kiltisbot.bot:main()"