[tool.poetry]
name = "fk-kiltisbot"
version = "0.1.0"
description = "Telegram bot for managing item & account balances, and showing calendar summaries"
authors = ["Fyysikkokilta ry <it@fyysikkokilta.fi>"]
readme = "README.md"
packages = [{include = "kiltisbot"}]

[tool.poetry.dependencies]
python = "^3.11"
google-api-core = '2.25.1'
google-api-python-client = '2.173.0'
google-auth = '2.40.3'
matplotlib = '3.10.3'
pandas = '2.3.0'
Pillow = '11.2.1'
python-telegram-bot = {extras = ["job-queue"], version = "^22.1"}
requests = '2.32.4'

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.35.0"
black = "^25.1.0"
pyright = "^1.1.402"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120

[tool.poe.tasks]
_black_check = "black --check ."
_type_check = "pyright ."
_lint = "ruff ."

lint = ["_black_check", "_lint", "_type_check"]
run.script = "kiltisbot.bot:main()"